# llm

./: .gitattributes  .pre-commit-config.yaml  LICENSE  README.md  config.py  library.py  llm.py  lmstudio_api.py  logger.py  ollama_api.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/: __init__.py  llm.py  lmstudio_api.py  ollama_api.py
tests/: test_lmstudio_api.py  test_mock_lmstudio_api.py  test_mock_ollama_api.py  test_ollama_api.py
